Fix mobile image alignment

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -56,7 +56,7 @@ body {
 }
 
 .l-box {
-  padding-right: 1em;
+  padding-right: 2em;
 }
 
 .share-buttons {
@@ -126,7 +126,7 @@ body {
 .pure-img-responsive {
   height: auto;
   max-width: 100%;
-  padding: 1em;
+  padding-top: 1em;
 }
 
 @media (min-width: 48em) {
